--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
         </div>
 
         <div class="half-width">
-            <img src="/images/jhankar.png" alt="">
+            <img src="images/jhankar.png" alt="">
         </div>
    </section>
 
    <section class="dream-big flexible-container">
         <div class="half-width">
-            <img src="/images/jhankar2.png" alt="">
+            <img src="images/jhankar2.png" alt="">
         </div>
 
         <div class="half-width">
